bug fixes and add medical.txt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
-            multiDexEnabled true
-            shrinkResources true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
